<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dashboard"
    android:padding="30dp"
    tools:context=".Late.Add">

    <EditText
        android:id="@+id/scanname_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:background="@drawable/text_input_shape"
        android:drawableStart="@drawable/icon_focused_person"
        android:drawablePadding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:hint="@string/name_and_fameliy"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/scanphone_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:maxLength="10"
        android:background="@drawable/text_input_shape"
        android:drawableStart="@drawable/icon_focused_phone"
        android:drawablePadding="12dp"
        android:hint="@string/טלפון"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanname_update"
        android:autofillHints="" />

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="168dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanphone_update" />


    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/remove"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update" />

    <EditText
        android:id="@+id/late_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:background="@drawable/text_input_shape"
        android:drawableStart="@drawable/icon_focused_late"
        android:drawablePadding="12dp"
        android:hint="@string/late"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanphone_update"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>