<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/background_dashboard"
    tools:context=".Late.Add">


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/text_input_shape"
        android:drawableStart="@drawable/icon_focused_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/טלפון"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="100dp"
                android:ems="10"
                android:background="@drawable/text_input_shape"
                android:drawableStart="@drawable/icon_focused_person"
                android:drawablePadding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:hint="@string/name_and_fameliy"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/late"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="36dp"
                android:ems="10"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:background="@drawable/text_input_shape"
                android:drawableStart="@drawable/icon_focused_late"
                android:drawablePadding="12dp"
                android:hint="@string/late"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_bias="0.0"
                android:autofillHints="" />


            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="168dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"/>


</androidx.constraintlayout.widget.ConstraintLayout>