<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dashboard"
    tools:context=".Late.Option">

    <Button
        android:id="@+id/ok_option"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:backgroundTint="@color/orange"
        android:text="@string/accept"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />

    <LinearLayout
        android:id="@+id/main_option"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:gravity="start|fill"
        android:orientation="vertical"
        android:showDividers="end"
        app:layout_constraintBottom_toTopOf="@+id/ok_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_drawable"
            android:orientation="vertical"
            android:showDividers="end">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/switch3"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_drawable"
            android:orientation="vertical"
            android:showDividers="end">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/switch1"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:thumb="@drawable/switch_thumb"
                android:visibility="visible"
                app:track="@drawable/switch_track" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>